--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "sanar-hackathon",
+  "name": "vidare",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.0.4",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "typescript": "3.5.2"
   },
@@ -32,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "https://sangue-land.dygufa.com",
+  "devDependencies": {
+    "@types/react-router-dom": "^4.3.4"
   }
 }
