--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "@types/react-qr-reader": "^2.1.2",
     "@types/react-webcam": "^1.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-webcam": "^1.1.1",
